// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should format the string with highlights 1`] = `<DocumentFragment />`;

exports[`should format the string with highlights 2`] = `
<DocumentFragment>
  message
</DocumentFragment>
`;

exports[`should format the string with highlights 3`] = `
<DocumentFragment>
  message
</DocumentFragment>
`;

exports[`should format the string with highlights 4`] = `
<DocumentFragment>
  <span>
    message
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 5`] = `
<DocumentFragment>
  .emotion-0 {
  background: rgb(252,252,253);
  border-color: rgb(225,230,243);
  color: rgb(62,67,87);
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
}

a .emotion-0 {
  padding-bottom: 0;
}

<span>
    m
    <span
      class="sw-code sw-rounded-1 sw-px-1 sw-border sw-border-solid emotion-0 emotion-1"
    >
      ess
    </span>
    a
    <span
      class="sw-code sw-rounded-1 sw-px-1 sw-border sw-border-solid emotion-0 emotion-1"
    >
      g
    </span>
    e
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 6`] = `
<DocumentFragment>
  <span>
    a somewhat longer message with overlapping ranges
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 7`] = `
<DocumentFragment>
  .emotion-0 {
  background: rgb(252,252,253);
  border-color: rgb(225,230,243);
  color: rgb(62,67,87);
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
}

a .emotion-0 {
  padding-bottom: 0;
}

<span>
    a somewhat longer message with overlapping range
    <span
      class="sw-code sw-rounded-1 sw-px-1 sw-border sw-border-solid emotion-0 emotion-1"
    >
      s
    </span>
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 8`] = `
<DocumentFragment>
  <span>
    a somewhat longer message with overlapping ranges
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 9`] = `
<DocumentFragment>
  .emotion-0 {
  background: rgb(252,252,253);
  border-color: rgb(225,230,243);
  color: rgb(62,67,87);
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
}

a .emotion-0 {
  padding-bottom: 0;
}

<span>
    a 
    <span
      class="sw-code sw-rounded-1 sw-px-1 sw-border sw-border-solid emotion-0 emotion-1"
    >
      somewhat longer message
    </span>
     with overlapping ranges
  </span>
</DocumentFragment>
`;

exports[`should format the string with highlights 10`] = `
<DocumentFragment>
  .emotion-0 {
  background: rgb(252,252,253);
  border-color: rgb(225,230,243);
  color: rgb(62,67,87);
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
}

a .emotion-0 {
  padding-bottom: 0;
}

<span>
    a 
    <span
      class="sw-code sw-rounded-1 sw-px-1 sw-border sw-border-solid emotion-0 emotion-1"
    >
      somewhat longer message with
    </span>
     overlapping ranges
  </span>
</DocumentFragment>
`;
